[package]
name = "NFT_Staking"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "nft_staking"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.19.0"
anchor-spl = "0.18.2"
metaplex-token-metadata = {version = "0.0.1", features = ["no-entrypoint"]}
spl-token = "3.2.0"
